[package]
name = "medea-control-api-proto"
version = "0.1.0-dev"
edition = "2018"
description = "Control API protocol implementation for Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-control-api-proto"
homepage = "https://github.com/instrumentisto/medea/tree/master/proto/control-api"
repository = "https://github.com/instrumentisto/medea/tree/master/proto/control-api"
readme = "README.md"
keywords = ["medea", "grpc", "control-api"]
categories = ["api-bindings", "network-programming"]

[features]
default = ["grpc"]
grpc = ["prost", "tonic-build", "tonic", "prost-types"]

[dependencies]
prost = { version = "0.6", optional = true }
tonic = { version = "0.1", optional = true }
prost-types = { version = "0.6", optional = true }

[build-dependencies]
tonic-build = { version = "0.1", optional = true}
