[package]
name = "medea-grpc-proto"
version = "0.1.0-dev"
edition = "2018"
description = "Compiled gRPC specs for Medea media server control API."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/instrumentisto/medea/tree/master/proto/grpc"
repository = "https://github.com/instrumentisto/medea/tree/master/proto/grpc"
readme = "README.md"
keywords = ["medea", "grpc", "control-api"]
categories = ["api-bindings", "web-programming"]

[dependencies]
grpcio = "0.4"
futures = "0.1"
protobuf = "2.7"

[build-dependencies]
protoc-grpcio = "1.0"
