[package]
name = "connection-dropper"
version = "0.1.0-dev"
edition = "2018"
description = "Coonection dropper for Medea E2E tests."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
readme = "README.md"
repository = "https://github.com/instrumentisto/medea"

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
clap = "2.33"
futures = "0.1"
grpcio = "0.4"
serde = { version = "1.0", features = ["derive"] }
iptables = "0.2"
slog = "2.4"
slog-scope = "4.1"
slog-term = "2.3"
slog-async = "2.3"
slog-stdlog = "3.0"
slog-envlogger = "2.1"
dotenv = "0.13"
rand = "0.7"
